[package]
name = "in-memory-cache"
description = "Basic implementation of in memory cache library"
version = "0.3.0"
edition = "2021"
authors = ["Đorđe Zeljić <zeljic@gmail.com>"]

[dependencies.bytes]
version = "1.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic_bench"
harness = false

[profile.release]
lto = true
